Tue Jan  8 12:05:06 2002  Jonathan Blandford  <jrb@redhat.com>

	* moduleinfo.py: whoops.  add esound.  Also add gconf-editor

Mon Jan  7 20:00:42 2002  Jonathan Blandford  <jrb@redhat.com>

	* moduleinfo.py: nautilus depends on esound.  gnome-control-center
	doesn't depend on libcapplet or bonobo-config.

2002-01-04  Alex Graveley  <alex@ximian.com>

       * jhbuild.py (addpath): Fix LD_PRELOAD munging so entire path to
       libgdkxft is removed, not just the library name.

2002-01-04  James Henstridge  <james@daa.com.au>

	* jhbuild.py (setup_env): get rid of libgdkxft.so from LD_PRELOAD
	if it is in there.  Can fix some build errors for people.

2002-01-03  Alex Graveley  <alex@ximian.com>

	* moduleinfo.py (head): libzvt depends on gnome-common for
	gnome-autogen.sh.

2001-12-24  James Henstridge  <james@daa.com.au>

	* bootstrap.py (Bootstrap._bold): same here.
	(Bootstrap.wants_package): string.find returns -1 on error -- not 0

	* module.py (BuildScript._message): if it is an xterm, also put
	messages in the window title.

2001-12-17  Xavier Ordoquy  <mcarkan@users.sourceforge.net>

	* moduleinfo.py: added zvt dependance to gnome-core.

2001-12-09  James Henstridge  <james@daa.com.au>

	* bootstrap.py: fix up bug for patch apply code found by Josh Lucas
	<josh@stonecottage.com>

2001-12-05  Owen Taylor  <otaylor@redhat.com>

	* moduleinfo.py (head): Add dependency on gnome-common
	for librsvg, libzvt for gnome-core. Add gnome-utils.

2001-12-04  James Henstridge  <james@daa.com.au>

	* README: more documentation updates.

	* gettext-changelog.patch: a patch to make gettextize not suck.

	* bootstrap.py (build_bootstraps): code to handle building
	required tools, such as autoconf, etc.

	* module.py (BuildScript.__init__): get rid of code setting up the
	environment from here.

	* jhbuild.py (addpath): move code that sets up the environment to
	this file.

	* README: update readme to reflect changed command line args.
