@@ -1,3 +1,9 @@
+Thu Jan 10 16:18:20 2002  Jonathan Blandford  <jrb@redhat.com>
+
+	* module.py (BuildScript.build): Allow you to re ./configure on
+	error.
+	(moduleinfo.py): Update dependencies on gnome-control-center
+
 Tue Jan  8 12:05:06 2002  Jonathan Blandford  <jrb@redhat.com>
 
 	* moduleinfo.py: whoops.  add esound.  Also add gconf-editor
